[project]
name = "baum-tools-v1"
version = "1.0.0"
description = "A modern terminal-based inspection and analysis foundation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "colorama>=0.4.6",
  "psutil>=6.1.0",
  "rich>=13.9.0"
]

[tool.ruff]
line-length = 88
target-version = "py312"
